--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
 * {
     margin: 0;
 }
+
+body {
+    background: rgb(83, 83, 83);
+}
+
+td, th {
+    background: white;
+    border-collapse: collapse;
+    border: 1px solid silver;
+}
+
+#calc {
+    background: white;
+    border-collapse: collapse;
+    height: 200px;
+    margin: auto;
+    margin-top: 50px;
+    border: 5px solid silver;
+}
+
+.button {
+    text-align: center;
+    width: 96px;
+}
+    .operator {
+        border-right: 5px solid silver;
+        width: 40px;
+    }
+
+.button:hover {
+    background: rgb(255, 210, 167);
+    cursor: pointer;
+}
+
+#title {
+    background: rgb(109, 22, 22);
+    color: white;
+}
+
+#output {
+    padding: 5px;
+    text-align: center;
+}
