finished toSeconds function, started working towards operator handling

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ td, th {
 .button {
     text-align: center;
     width: 96px;
+    user-select: none;
 }
     .operator {
         border-right: 5px solid silver;
